# aws-nitro-enclaves-samples

./: .gitignore  docker-compose.yml
nsm_sample/: Cargo.toml  Dockerfile
nsm_sample/src/: client.rs  command_parser.rs  lib.rs  main.rs  nsm_test.rs  server.rs  socket.rs  utils.rs  writer.rs
vsock_sample/rs/: Cargo.toml
vsock_sample/rs/src/: lib.rs
