[package]
name = "nsm_sample"
version = "0.1.0"
authors = ["Yan Mingzhi <realraindust@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
log = "0.4"
nix = "0.15"
byteorder = "1.3"
libc = "0.2"
nsm-lib = {git = "https://github.com/aws/aws-nitro-enclaves-nsm-api", rev = "34bad95"}